--- a/app/src/main/res/layout/activity_editor_options.xml
+++ b/app/src/main/res/layout/activity_editor_options.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.themable.editors.OptionEditorActivity">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -40,8 +39,8 @@
             android:id="@+id/progress_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:text="@string/applying_changes"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:text="@string/applying_changes" />
 
         <ScrollView
             android:id="@+id/content_layout"
@@ -98,6 +97,10 @@
                     android:layout_height="match_parent"
                     android:text="@string/new_value" />
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
                 <RadioGroup
                     android:id="@+id/options_radio_group"
                     android:layout_width="match_parent"
@@ -106,7 +109,7 @@
                 <Button
                     android:id="@+id/save_button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/button_height"
                     android:layout_marginVertical="48dp"
                     android:text="@string/save" />
             </LinearLayout>
