--- a/app/src/main/res/layout/activity_editor_range.xml
+++ b/app/src/main/res/layout/activity_editor_range.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.themable.editors.RangeEditorActivity">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -123,7 +122,7 @@
                 <Button
                     android:id="@+id/save_button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/button_height"
                     android:layout_marginVertical="48dp"
                     android:text="@string/save" />
             </LinearLayout>
