--- a/app/src/main/res/layout/activity_editor_text.xml
+++ b/app/src/main/res/layout/activity_editor_text.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.themable.editors.TextEditorActivity">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -39,9 +38,9 @@
         <de.eloc.eloc_control_panel.widgets.ProgressIndicator
             android:id="@+id/progress_indicator"
             android:layout_width="wrap_content"
-            app:text="@string/applying_changes"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:text="@string/applying_changes" />
 
         <ScrollView
             android:id="@+id/content_layout"
@@ -114,7 +113,7 @@
                 <Button
                     android:id="@+id/save_button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/button_height"
                     android:layout_marginVertical="48dp"
                     android:text="@string/save" />
             </LinearLayout>
