--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources>
+
+    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/actionbar</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="materialButtonStyle">@style/AppButtonStyle</item>
+        <item name="materialAlertDialogTheme">@style/MaterialAlertDialogTheme</item>
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
+        <item name="android:statusBarColor">@color/actionbar</item>
+        <item name="android:windowBackground">@color/window</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="toolbarStyle">@style/ElocToolbarStyle</item>
+    </style>
+
+    <style name="AppThemeMedium" parent="AppTheme">
+        <item name="android:textSize">18sp</item>
+        <item name="android:labelTextSize">18sp</item>
+    </style>
+
+    <style name="AppThemeLarge" parent="AppTheme">
+        <item name="android:textSize">22sp</item>
+        <item name="android:labelTextSize">22sp</item>
+    </style>
+
+    <style name="AppButtonStyle" parent="Widget.Material3.Button.ElevatedButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">true</item>
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="ActionBarStyle" parent="Widget.Material3.ActionBar.Solid">
+        <item name="background">@drawable/actionbar_background</item>
+    </style>
+
+    <style name="MaterialAlertDialogTheme" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="buttonBarPositiveButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+        <item name="buttonBarNeutralButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+    </style>
+
+    <style name="MaterialAlerDialogButtonStyle" parent="Widget.Material3.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontWeight">600</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
+    <style name="InfoTextView" parent="AppTheme">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="SectionTitle" parent="InfoTextView">
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TitleDescription" parent="InfoTextView">
+        <item name="android:textAppearance">@style/TextAppearance.Material3.BodySmall</item>
+    </style>
+
+    <style name="TileTitle" parent="InfoTextView">
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
+    <style name="IndentedTileTitle" parent="TileTitle">
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
+
+    <style name="TileValue" parent="InfoTextView">
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
+
+    <style name="AppBaseButtonStyle" parent="Widget.Material3.Button.ElevatedButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppTextButton" parent="AppBaseButtonStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:background">?selectableItemBackground</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="ElocToolbarStyle" parent="Widget.Material3.Toolbar">
         <item name="navigationIconTint">@color/white</item>
