--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activities.PasswordResetActivity">
+    tools:context=".activities.themable.PasswordResetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,19 +29,7 @@
             app:tint="#fff" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="64dp"
-        android:contentDescription="@string/app_logo"
-        android:src="@drawable/logo_dark" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:text="@string/app_name"
-        android:textSize="18sp" />
+    <include layout="@layout/layout_app_header" />
 
     <TextView
         android:layout_width="320dp"
