--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RegisterActivity">
+    tools:context=".activities.themable.RegisterActivity">
 
     <de.eloc.eloc_control_panel.widgets.OfflineLayout
         android:id="@+id/offline_layout"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:text="@string/checking_internet_connection"
-        tools:visibility="visible" />
+        tools:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/registration_layout"
@@ -30,7 +30,7 @@
         android:focusable="true"
         android:gravity="center"
         android:orientation="vertical"
-        tools:visibility="invisible">
+        tools:visibility="visible">
 
         <ImageButton
             android:id="@+id/back_button"
@@ -50,25 +50,13 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:contentDescription="@string/app_logo"
-            android:src="@drawable/logo_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:text="@string/app_name"
-            android:textSize="18sp" />
+        <include layout="@layout/layout_app_header" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/email_address_layout"
             style="@style/Widget.Material3.TextInputLayout.FilledBox"
             android:layout_width="@dimen/auth_input_width"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             app:boxBackgroundColor="@android:color/transparent"
             app:counterEnabled="true"
             app:counterMaxLength="@integer/auth_input_max_length"
