--- a/app/src/main/res/layout/activity_editor_range.xml
+++ b/app/src/main/res/layout/activity_editor_range.xml
@@ -110,14 +110,43 @@
                     app:tickVisible="true"
                     app:trackColorInactive="#c1c1c1" />
 
-                <TextView
-                    android:id="@+id/new_value_text_view"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    tools:text="90%" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/decrement_button"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:contentDescription="@string/decrement"
+                        android:focusable="true"
+                        android:padding="4dp"
+                        android:src="@drawable/circle_remove"
+                        app:tint="@color/colorPrimaryDark" />
+
+                    <TextView
+                        android:id="@+id/new_value_text_view"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textAlignment="center"
+                        tools:text="90%" />
+
+                    <ImageView
+                        android:id="@+id/increment_button"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:clickable="true"
+                        android:contentDescription="@string/increment"
+                        android:focusable="true"
+                        android:padding="4dp"
+                        android:src="@drawable/circle_add"
+                        app:tint="@color/colorPrimaryDark" />
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/save_button"
